--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-    "functions": {
-      "api/*.php": {
-        "runtime": "vercel-php@0.5.1"
-      }
+  "functions": {
+    "registration/*.php": {
+      "runtime": "vercel-php@0.5.1"
     }
   }
+}
+
   
